hrml ID bug fix

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 </div>
             </div>
             <div class="chevron-status">
-                <div class="chevron-status-container" id="chevron-status-1">
-                    <div class="chevron-status-box active">
+                <div class="chevron-status-container">
+                    <div class="chevron-status-box active" id="chevron-status-1">
                         <div class="chevron-status-red"></div>
                         <div class="chevron-status-green"></div>
                         <div class="chevron-status-text">1</div>
