added bottom of the page

--- a/index.html
+++ b/index.html
@@ -71,8 +71,41 @@
         </div>
         <div class="center"></div>
         <div class="right-panel"></div>
-        <div class="bottom"></div>
+        <div class="bottom">
+            <div class="bottom-left">
+                <p class="title-auth">Auth Code</p>
+                <div class="character-border">
+                    <span>1</span>
+                    <span>8</span>
+                    <span>4</span>
+                    <span>6</span>
+                    <span>9</span>
+                    <span>1</span>
+                    <span>8</span>
+                    <span>4</span>
+                    <span>6</span>
+                    <span>9</span>
+                    <span>1</span>
+                    <span>8</span>
+                    <span>4</span>
+                    <span>6</span>
+                    <span>-</span>
+                    <span>1</span>
+                    <span>8</span>
+                    <span>4</span>
+                    <span>6</span>
+                    <span>9</span>
+                </div>
+            </div>
+            <div class="bottom-center"><img src="assets/images/keyboard.png" alt=""/></div>
+            <div class="bottom-right">
+                <p>User: <span>Sgt. W. Davis 102951-8</span></p>
+                <p>Status: <span>Active</span></p>
+                <p>Sys: <span>Nominal</span></p>
+            </div>
 
-        <script src="js/randomBinary.js" type="text/javascript"></script>
+        </div>
+
+                <script src="js/randomBinary.js" type="text/javascript"></script>
     </body>
 </html>
