--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 
         </div>
 
-                <script src="js/randomBinary.js" type="text/javascript"></script>
+        <!--                <script src="js/randomBinary.js" type="text/javascript"></script>-->
+        <script src="js/flashingLights.js" type="text/javascript"></script>
     </body>
 </html>
