added offwrld destination text

--- a/index.html
+++ b/index.html
@@ -70,7 +70,18 @@
             </div>
         </div>
         <div class="center"></div>
-        <div class="right-panel"></div>
+        <div class="right-panel">
+            <div class="character-border">
+                <span>O</span>
+                <span>F</span>
+                <span>F</span>
+                <span>W</span>
+                <span>R</span>
+                <span>L</span>
+                <span>D</span>
+                <p class="destination-text">DESTINATION</p>
+            </div>
+        </div>
         <div class="bottom">
             <div class="bottom-left">
                 <p class="title-auth">Auth Code</p>
@@ -106,7 +117,7 @@
 
         </div>
 
-        <script src="js/randomBinary.js" type="text/javascript"></script>
-        <script src="js/flashingLights.js" type="text/javascript"></script>
+        <!--        <script src="js/randomBinary.js" type="text/javascript"></script>
+                <script src="js/flashingLights.js" type="text/javascript"></script>-->
     </body>
 </html>
