added right panel

--- a/index.html
+++ b/index.html
@@ -81,6 +81,54 @@
                 <span>D</span>
                 <p class="destination-text">DESTINATION</p>
             </div>
+            <div class="line-container">
+                <div class="line" id="glyph4-b"></div>
+                <div class="line" id="glyph5-b"></div>
+                <div class="line" id="glyph6-b"></div>
+                <div class="line" id="glyph7-b"></div>
+            </div>
+            <div class="glyph-container">
+                <div class="glyph" id="glyph1">
+                    <div class="line"></div>
+                </div>
+                <div class="glyph" id="glyph2">
+                    <div class="line"></div>
+                </div>
+                <div class="glyph" id="glyph3">
+                    <div class="line"></div>
+                </div>
+                <div class="glyph" id="glyph4">
+                    <div class="line">
+                        <div class="line-holder">
+                            <div class="line" id="glyph4-a"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="glyph" id="glyph5">
+                    <div class="line">
+                        <div class="line-holder">
+                            <div class="line" id="glyph5-a"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="glyph" id="glyph6">
+                    <div class="line">
+                        <div class="line-holder">
+                            <div class="line" id="glyph6-a"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="glyph" id="glyph7">
+                    <div class="line">
+                        <div class="line-holder">
+                            <div class="line" id="glyph7-a"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="flashing-box">
+                    
+                </div>
+            </div>
         </div>
         <div class="bottom">
             <div class="bottom-left">
@@ -117,7 +165,8 @@
 
         </div>
 
-        <!--        <script src="js/randomBinary.js" type="text/javascript"></script>
-                <script src="js/flashingLights.js" type="text/javascript"></script>-->
+<!--        <script src="js/randomBinary.js" type="text/javascript"></script>
+        <script src="js/flashingLights.js" type="text/javascript"></script>-->
+        <script src="js/generateLines.js" type="text/javascript"></script>
     </body>
 </html>
