--- a/index.html
+++ b/index.html
@@ -69,7 +69,48 @@
                 </div>
             </div>
         </div>
-        <div class="center"></div>
+        <div class="center">
+            <div class="stargate-container">
+                <div class="stargate">
+                    <div class="rings">
+                        <div class="inner-ring"></div>
+                        <div class="glyph-ring-inner"></div>
+                        <div class="glyph-ring-outer">
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                            <div class="diagonal-line"></div>
+                        </div>
+                        <div class="outer-ring-1"></div>
+                        <div class="outer-ring-2"></div>
+                        <div class="outer-ring-3"></div>
+                    </div>
+                    <div class="chevron-holder">
+                        <div class="chevron">
+                            <div class="chevron-inner"></div>
+                            <div class="chevron-outer"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="status-container"></div>
+        </div>
         <div class="right-panel">
             <div class="character-border">
                 <span>O</span>
@@ -126,7 +167,7 @@
                     </div>
                 </div>
                 <div class="flashing-box">
-                    
+
                 </div>
             </div>
         </div>
@@ -165,8 +206,8 @@
 
         </div>
 
-<!--        <script src="js/randomBinary.js" type="text/javascript"></script>
-        <script src="js/flashingLights.js" type="text/javascript"></script>-->
+        <!--        <script src="js/randomBinary.js" type="text/javascript"></script>
+                <script src="js/flashingLights.js" type="text/javascript"></script>-->
         <script src="js/generateLines.js" type="text/javascript"></script>
     </body>
 </html>
