--- a/index.html
+++ b/index.html
@@ -102,9 +102,288 @@
                         <div class="outer-ring-3"></div>
                     </div>
                     <div class="chevron-holder">
-                        <div class="chevron">
-                            <div class="chevron-inner"></div>
-                            <div class="chevron-outer"></div>
+                        <div class="chevron" id="chevron-7">
+                            <div class="chevron-inner">
+                                <div class="top-line"></div>
+                                <div class="side-left"></div>
+                                <div class="side-right"></div>
+                                <div class="middle-background"></div>
+                                <div class="bottom-line"></div>
+                                <div class="light light-middle"></div>
+                            </div>
+                            <div class="chevron-outer">
+
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="wing-left">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="wing-right">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="light light-left"></div>
+                                <div class="light light-right"></div>
+                            </div>
+                        </div>
+
+                        <div class="chevron" id="chevron-1">
+                            <div class="chevron-inner">
+                                <div class="top-line"></div>
+                                <div class="side-left"></div>
+                                <div class="side-right"></div>
+                                <div class="middle-background"></div>
+                                <div class="bottom-line"></div>
+                                <div class="light light-middle"></div>
+                            </div>
+                            <div class="chevron-outer">
+
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="wing-left">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="wing-right">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="light light-left"></div>
+                                <div class="light light-right"></div>
+                            </div>
+                        </div>
+
+                        <div class="chevron" id="chevron-2">
+                            <div class="chevron-inner">
+                                <div class="top-line"></div>
+                                <div class="side-left"></div>
+                                <div class="side-right"></div>
+                                <div class="middle-background"></div>
+                                <div class="bottom-line"></div>
+                                <div class="light light-middle"></div>
+                            </div>
+                            <div class="chevron-outer">
+
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="wing-left">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="wing-right">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="light light-left"></div>
+                                <div class="light light-right"></div>
+                            </div>
+                        </div>
+
+                        <div class="chevron" id="chevron-3">
+                            <div class="chevron-inner">
+                                <div class="top-line"></div>
+                                <div class="side-left"></div>
+                                <div class="side-right"></div>
+                                <div class="middle-background"></div>
+                                <div class="bottom-line"></div>
+                                <div class="light light-middle"></div>
+                            </div>
+                            <div class="chevron-outer">
+
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="wing-left">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="wing-right">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="light light-left"></div>
+                                <div class="light light-right"></div>
+                            </div>
+                        </div>
+
+                        <div class="chevron" id="chevron-8">
+                            <div class="chevron-inner">
+                                <div class="top-line"></div>
+                                <div class="side-left"></div>
+                                <div class="side-right"></div>
+                                <div class="middle-background"></div>
+                                <div class="bottom-line"></div>
+                                <div class="light light-middle"></div>
+                            </div>
+                            <div class="chevron-outer">
+
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="wing-left">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="wing-right">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="light light-left"></div>
+                                <div class="light light-right"></div>
+                            </div>
+                        </div>
+                        <div class="chevron" id="chevron-9">
+                            <div class="chevron-inner">
+                                <div class="top-line"></div>
+                                <div class="side-left"></div>
+                                <div class="side-right"></div>
+                                <div class="middle-background"></div>
+                                <div class="bottom-line"></div>
+                                <div class="light light-middle"></div>
+                            </div>
+                            <div class="chevron-outer">
+
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="wing-left">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="wing-right">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="light light-left"></div>
+                                <div class="light light-right"></div>
+                            </div>
+                        </div>
+                        <div class="chevron" id="chevron-4">
+                            <div class="chevron-inner">
+                                <div class="top-line"></div>
+                                <div class="side-left"></div>
+                                <div class="side-right"></div>
+                                <div class="middle-background"></div>
+                                <div class="bottom-line"></div>
+                                <div class="light light-middle"></div>
+                            </div>
+                            <div class="chevron-outer">
+
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="wing-left">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="wing-right">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="light light-left"></div>
+                                <div class="light light-right"></div>
+                            </div>
+                        </div>
+                        <div class="chevron" id="chevron-5">
+                            <div class="chevron-inner">
+                                <div class="top-line"></div>
+                                <div class="side-left"></div>
+                                <div class="side-right"></div>
+                                <div class="middle-background"></div>
+                                <div class="bottom-line"></div>
+                                <div class="light light-middle"></div>
+                            </div>
+                            <div class="chevron-outer">
+
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="wing-left">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="wing-right">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="light light-left"></div>
+                                <div class="light light-right"></div>
+                            </div>
+                        </div>
+                        <div class="chevron" id="chevron-6">
+                            <div class="chevron-inner">
+                                <div class="top-line"></div>
+                                <div class="side-left"></div>
+                                <div class="side-right"></div>
+                                <div class="middle-background"></div>
+                                <div class="bottom-line"></div>
+                                <div class="light light-middle"></div>
+                            </div>
+                            <div class="chevron-outer">
+
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="wing-left">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="wing-right">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
+                                <div class="bottom-line"></div>
+                                <div class="bottom-line-top"></div>
+                                <div class="light light-left"></div>
+                                <div class="light light-right"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
