--- a/index.html
+++ b/index.html
@@ -100,6 +100,38 @@
                         <div class="outer-ring-1"></div>
                         <div class="outer-ring-2"></div>
                         <div class="outer-ring-3"></div>
+                        <div class="light-container item1">
+                            <div class="light"></div>
+                        </div>
+                        <div class="light-container item2">
+                            <div class="light"></div>
+                        </div>
+                        <div class="light-container item3">
+                            <div class="light"></div>
+                        </div>
+                        <div class="light-container item4">
+                            <div class="light"></div>
+                        </div>
+                        <div class="grip-container item1">
+                            <div class="grip-lower"></div>
+                            <div class="grip-upper"></div>
+                        </div>
+                        <div class="grip-container item2">
+                            <div class="grip-lower"></div>
+                            <div class="grip-upper"></div>
+                        </div>
+                        <div class="grip-container item3">
+                            <div class="grip-lower"></div>
+                            <div class="grip-upper"></div>
+                        </div>
+                        <div class="grip-container item4">
+                            <div class="grip-lower"></div>
+                            <div class="grip-upper"></div>
+                        </div>
+                        <div class="grip-container item5">
+                            <div class="grip-lower"></div>
+                            <div class="grip-upper"></div>
+                        </div>
                     </div>
                     <div class="chevron-holder">
                         <div class="chevron" id="chevron-7">
@@ -134,7 +166,7 @@
                             </div>
                         </div>
 
-                        <div class="chevron" id="chevron-1">
+                        <div class="chevron locked" id="chevron-1">
                             <div class="chevron-inner">
                                 <div class="top-line"></div>
                                 <div class="side-left"></div>
@@ -166,7 +198,7 @@
                             </div>
                         </div>
 
-                        <div class="chevron" id="chevron-2">
+                        <div class="chevron locked active" id="chevron-2">
                             <div class="chevron-inner">
                                 <div class="top-line"></div>
                                 <div class="side-left"></div>
@@ -230,7 +262,7 @@
                             </div>
                         </div>
 
-                        <div class="chevron" id="chevron-8">
+                        <div class="chevron inactive" id="chevron-8">
                             <div class="chevron-inner">
                                 <div class="top-line"></div>
                                 <div class="side-left"></div>
@@ -261,7 +293,7 @@
                                 <div class="light light-right"></div>
                             </div>
                         </div>
-                        <div class="chevron" id="chevron-9">
+                        <div class="chevron inactive" id="chevron-9">
                             <div class="chevron-inner">
                                 <div class="top-line"></div>
                                 <div class="side-left"></div>
@@ -386,6 +418,36 @@
                             </div>
                         </div>
                     </div>
+                    <div class="line-container">
+                        <div class="line linear line-chevron4" id="glyph4-c"></div>
+                        <div class="line linear line-chevron5" id="glyph5-c"></div>
+                        <div class="line linear line-chevron6" id="glyph6-c"></div>
+                        <div class="line linear line-chevron7" id="glyph7-c">
+                            <div class="line line-chevron7"></div>
+                        </div>
+                        <div class="line line-chevron1" >
+                            <div class="line line-chevron1" id="glyph1-b"></div>
+                        </div>
+                        <div class="line line-chevron2" id="glyph2-b" ></div>
+                        <div class="line line-chevron3" id="glyph3-b" ></div>
+                        <div class="left-line-container">
+                            <div class="line line-chevron6">
+                                <div class="line line-chevron6">
+                                    <div class="line line-chevron6"></div>
+                                </div>
+                            </div>
+                            <div class="line line-chevron5">
+                                <div class="line line-chevron5">
+                                    <div class="line line-chevron5"></div>
+                                </div>
+                            </div>
+                            <div class="line line-chevron4">
+                                <div class="line line-chevron4">
+                                    <div class="line line-chevron4"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="status-container"></div>
@@ -402,46 +464,46 @@
                 <p class="destination-text">DESTINATION</p>
             </div>
             <div class="line-container">
-                <div class="line" id="glyph4-b"></div>
-                <div class="line" id="glyph5-b"></div>
-                <div class="line" id="glyph6-b"></div>
-                <div class="line" id="glyph7-b"></div>
+                <div class="line line-chevron4" id="glyph4-b"></div>
+                <div class="line line-chevron5" id="glyph5-b"></div>
+                <div class="line line-chevron6" id="glyph6-b"></div>
+                <div class="line line-chevron7" id="glyph7-b"></div>
             </div>
             <div class="glyph-container">
                 <div class="glyph" id="glyph1">
-                    <div class="line"></div>
+                    <div class="line line-chevron1" id="glyph1-a"></div>
                 </div>
                 <div class="glyph" id="glyph2">
-                    <div class="line"></div>
+                    <div class="line line-chevron2" id="glyph2-a"></div>
                 </div>
                 <div class="glyph" id="glyph3">
-                    <div class="line"></div>
+                    <div class="line line-chevron3" id="glyph3-a"></div>
                 </div>
                 <div class="glyph" id="glyph4">
-                    <div class="line">
+                    <div class="line line-chevron4">
                         <div class="line-holder">
-                            <div class="line" id="glyph4-a"></div>
+                            <div class="line line-chevron4" id="glyph4-a"></div>
                         </div>
                     </div>
                 </div>
                 <div class="glyph" id="glyph5">
-                    <div class="line">
+                    <div class="line line-chevron5">
                         <div class="line-holder">
-                            <div class="line" id="glyph5-a"></div>
+                            <div class="line line-chevron5" id="glyph5-a"></div>
                         </div>
                     </div>
                 </div>
                 <div class="glyph" id="glyph6">
-                    <div class="line">
+                    <div class="line line-chevron6">
                         <div class="line-holder">
-                            <div class="line" id="glyph6-a"></div>
+                            <div class="line line-chevron6" id="glyph6-a"></div>
                         </div>
                     </div>
                 </div>
                 <div class="glyph" id="glyph7">
-                    <div class="line">
+                    <div class="line line-chevron7">
                         <div class="line-holder">
-                            <div class="line" id="glyph7-a"></div>
+                            <div class="line line-chevron7" id="glyph7-a"></div>
                         </div>
                     </div>
                 </div>
