--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             </div>
             <div class="chevron-status">
                 <div class="chevron-status-container">
-                    <div class="chevron-status-box active" id="chevron-status-1">
+                    <div class="chevron-status-box" id="chevron-status-1"> <!-- active is possible class -->
                         <div class="chevron-status-red"></div>
                         <div class="chevron-status-green"></div>
                         <div class="chevron-status-text">1</div>
                         <div class="chevron-status-ok">OK</div>
                     </div>
-                    <div class="chevron-status-box active" id="chevron-status-2">
+                    <div class="chevron-status-box" id="chevron-status-2">
                         <div class="chevron-status-red"></div>
                         <div class="chevron-status-green"></div>
                         <div class="chevron-status-text">2</div>
@@ -166,7 +166,7 @@
                             </div>
                         </div>
 
-                        <div class="chevron locked" id="chevron-1">
+                        <div class="chevron" id="chevron-1"><!-- TODO: locked or active are possible classes -->
                             <div class="chevron-inner">
                                 <div class="top-line"></div>
                                 <div class="side-left"></div>
@@ -198,7 +198,7 @@
                             </div>
                         </div>
 
-                        <div class="chevron locked active" id="chevron-2">
+                        <div class="chevron" id="chevron-2">
                             <div class="chevron-inner">
                                 <div class="top-line"></div>
                                 <div class="side-left"></div>
@@ -450,7 +450,79 @@
                     </div>
                 </div>
             </div>
-            <div class="status-container"></div>
+            <div class="status-container">
+                <div class="inner-box">
+                    <div class="border-black-left"></div>
+                    <div class="border-black-right"></div>
+                    <div class="lst-code-1">LST CODE #1</div>
+                    <div class="lst-code-2">LST CODE #2</div>
+                    <div class="line-border-top">
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                    </div>
+                    <div class="line-border-bottom">
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                        <div class="line-border"></div>
+                    </div>
+                    <div class="flashing-box flashing-box-1"></div>
+                    <div class="flashing-box flashing-box-2"></div>
+                    <div class="notification-box idle" id="status-box">
+                        <p class="notification-text idle">IDLE</p>
+                        <p class="notification-text engaged">ENGAGED</p>
+                        <p class="notification-text locked">LOCKED</p>
+                        <p class="notification-text shutdown">SHUTDOWN</p>
+                        <p class="notification-text incoming">INCOMING</p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="right-panel">
             <div class="character-border">
@@ -547,8 +619,8 @@
 
         </div>
 
-        <!--        <script src="js/randomBinary.js" type="text/javascript"></script>
-                <script src="js/flashingLights.js" type="text/javascript"></script>-->
+        <script src="js/randomBinary.js" type="text/javascript"></script>
+        <script src="js/flashingLights.js" type="text/javascript"></script>
         <script src="js/generateLines.js" type="text/javascript"></script>
     </body>
 </html>
