added some animations and moving glyphs

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="center">
             <div class="stargate-container">
-                <div class="stargate">
+                <div class="stargate" id="stargate">
                     <div class="rings">
                         <div class="inner-ring"></div>
                         <div class="glyph-ring-inner"></div>
@@ -525,7 +525,7 @@
             </div>
         </div>
         <div class="right-panel">
-            <div class="character-border">
+            <div class="character-border" id="destination-text">
                 <span>O</span>
                 <span>F</span>
                 <span>F</span>
