complete with demo, ready for api

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="stargate-container">
                 <div class="stargate" id="stargate">
                     <div class="rings">
-                        <div class="inner-ring"></div>
+                        <div class="inner-ring" id="stargate-background"></div>
                         <div class="glyph-ring-inner"></div>
                         <div class="glyph-ring-outer" id="stargate-rotation">
                             <div class="diagonal-line"></div>
@@ -540,18 +540,22 @@
                 <div class="line line-chevron5" id="glyph5-b"></div>
                 <div class="line line-chevron6" id="glyph6-b"></div>
                 <div class="line line-chevron7" id="glyph7-b"></div>
-            </div>
+            </div>  
             <div class="glyph-container">
                 <div class="glyph" id="glyph1">
+                    <div class="glyph-number">1</div>
                     <div class="line line-chevron1" id="glyph1-a"></div>
                 </div>
                 <div class="glyph" id="glyph2">
+                    <div class="glyph-number">2</div>
                     <div class="line line-chevron2" id="glyph2-a"></div>
                 </div>
                 <div class="glyph" id="glyph3">
+                    <div class="glyph-number">3</div>
                     <div class="line line-chevron3" id="glyph3-a"></div>
                 </div>
                 <div class="glyph" id="glyph4">
+                    <div class="glyph-number">4</div>
                     <div class="line line-chevron4">
                         <div class="line-holder">
                             <div class="line line-chevron4" id="glyph4-a"></div>
@@ -559,6 +563,7 @@
                     </div>
                 </div>
                 <div class="glyph" id="glyph5">
+                    <div class="glyph-number">5</div>
                     <div class="line line-chevron5">
                         <div class="line-holder">
                             <div class="line line-chevron5" id="glyph5-a"></div>
@@ -566,6 +571,7 @@
                     </div>
                 </div>
                 <div class="glyph" id="glyph6">
+                    <div class="glyph-number">6</div>
                     <div class="line line-chevron6">
                         <div class="line-holder">
                             <div class="line line-chevron6" id="glyph6-a"></div>
@@ -573,6 +579,7 @@
                     </div>
                 </div>
                 <div class="glyph" id="glyph7">
+                    <div class="glyph-number">7</div>
                     <div class="line line-chevron7">
                         <div class="line-holder">
                             <div class="line line-chevron7" id="glyph7-a"></div>
