added auto play for demo, updated readme

--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                     <span>9</span>
                 </div>
             </div>
-            <div class="bottom-center" onclick="activateStargate()"><img src="assets/images/keyboard.png" alt=""/></div>
+            <div class="bottom-center"><img src="assets/images/keyboard.png" alt=""/></div>
             <div class="bottom-right">
                 <p>User: <span>Sgt. W. Davis 102951-8</span></p>
                 <p>Status: <span>Active</span></p>
